Proyecto Individual/force-app/main/default/objects/User/fields/User_type__c.field-meta.xml
<CustomField>
    <fullName>User_type__c</fullName>
    <label>User type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Student</fullName>
                <default>true</default>
                <label>Student</label>
            </value>
            <value>
                <fullName>Professor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>